fix footer on tablet widths (bug 1129031)

--- a/src/media/css/footer.styl
+++ b/src/media/css/footer.styl
@@ -60,7 +60,6 @@ $support-nav-height = 55px;
         .pad,
         .support-navigation {
             margin: 0 auto;
-            width: $max-site-width;
         }
         .support-navigation {
             align-items: baseline;
